[MIG] l10n_br_crm: Migration to 13.0

--- a/l10n_br_crm/views/crm_lead_view.xml
+++ b/l10n_br_crm/views/crm_lead_view.xml
@@ -4,7 +4,7 @@
     <record id="l10n_br_crm_leads_form" model="ir.ui.view">
         <field name="name">l10n_br_crm.leads.form</field>
         <field name="model">crm.lead</field>
-        <field name="inherit_id" ref="crm.crm_case_form_view_leads" />
+        <field name="inherit_id" ref="crm.crm_lead_view_form" />
         <field name="arch" type="xml">
             <field name="partner_name" position="after">
                 <field name="legal_name" />
