--- a/l10n_br_cnpj/views/res_partner_view.xml
+++ b/l10n_br_cnpj/views/res_partner_view.xml
@@ -30,4 +30,15 @@
         </field>
     </record>
 
+     <record id="l10n_br_cnpj_fiscal_partner_form" model="ir.ui.view">
+        <field name="name">l10n_br_fiscal.partner.form (in l10n_br_cnpj)</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="l10n_br_fiscal.partner_form" />
+        <field name="arch" type="xml">
+            <field name="cnae_main_id" position="after">
+                <field name="capital_social" widget="monetary" />
+            </field>
+        </field>
+    </record>
+
 </odoo>
